--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,3 +1,17 @@
+{% if site.analytics.provider and page.analytics != false %}
+{% case site.analytics.provider %}	  gtag('config', 'G-RNN7LCVDRR');
+{% when "google" %}	</script>
+  {% include /analytics-providers/google.html %}	
+{% when "google-universal" %}	
+  {% include /analytics-providers/google-universal.html %}	
+{% when "custom" %}	
+  {% include /analytics-providers/custom.html %}	
+{% endcase %}	
+
+{% endif %} 	
+
+
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
 <script>
